Migrate bookstore from in-memory store to Oracle DB using Spring Data JPA
- Add spring-boot-starter-data-jpa, ojdbc11 (Oracle JDBC), and H2 (test) dependencies
- Annotate all model classes as JPA entities with BS_-prefixed table names to avoid Oracle reserved word conflicts
- Create 7 Spring Data JPA repository interfaces (User, Book, Cart, Order, Account, Transaction, Coupon)
- Migrate all services (Auth, Book, Cart, Order, Account, Admin, CouponHelper) to use JPA repositories with @Transactional
- Replace synchronized InMemoryStore block in OrderService with database-level transaction atomicity
- Update DataSeeder to use repositories and check count() instead of isEmpty()
- Remove @Component from InMemoryStore (kept for reference only)
- Configure Oracle datasource in application.properties
- Add H2 in-memory Oracle-mode datasource for tests (src/test/resources/application.properties)
- Rewrite unit tests using MockRepositories helper (HashMap-backed Mockito mocks for stateful test behavior)
- Update CartOrderIntegrationTest to use JPA repositories instead of InMemoryStore
- Fix H2 reserved word conflict: rename Coupon.VALUE column to COUPON_VALUE
- All 140 tests pass (83 unit + 57 integration)

https://claude.ai/code/session_016Ldeq5TGTbhK87BkywB5yf